--- a/BlogposterCMS/apps/designer/partials/builder/color-panel.html
+++ b/BlogposterCMS/apps/designer/partials/builder/color-panel.html
@@ -1,5 +1,7 @@
 <div class="builder-panel color-panel">
-  <button class="collapse-btn" aria-label="Close panel">&#x2192;</button>
+  <button class="collapse-btn" aria-label="Close panel">
+    <img src="/assets/icons/x.svg" alt="close" />
+  </button>
   <h4>Textfarbe</h4>
   <div class="color-panel-content">
     <!-- Color picker will be injected here -->
