--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -40,3 +40,4 @@
 @import 'pages/news-item';
 @import 'components/widgets-panel';
 @import 'components/grid-mode';
+@import 'components/publish-popup';
