Replace home dashboard widgets with roadmap and drag demo

--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -41,3 +41,4 @@
 @import 'components/widgets-panel';
 @import 'components/grid-mode';
 @import 'components/publish-popup';
+@import 'components/home-widgets';
